--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter_login_facebook: ^1.0.1
   provider: ^5.0.0
   flutter_nearby_connections: ^1.0.11
+  expansion_tile_card: ^2.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
