--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,10 @@ dependencies:
   google_sign_in: ^5.0.2
   flutter_login_facebook: ^1.0.1
   provider: ^5.0.0
-  flutter_nearby_connections: ^1.0.11
+#  flutter_nearby_connections: ^1.0.11
   expansion_tile_card: ^2.0.0
+#  get_it: ^7.1.3
+#  get_it_mixin: ^3.1.1
 
 
 
